--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "near-api-js": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
-    "@near-wallet-selector/core": "^7.0.0",
-    "@near-wallet-selector/ledger": "^7.0.0",
-    "@near-wallet-selector/math-wallet": "^7.0.0",
-    "@near-wallet-selector/meteor-wallet": "^7.0.0",
-    "@near-wallet-selector/modal-ui": "^7.0.0",
-    "@near-wallet-selector/my-near-wallet": "^7.0.0",
-    "@near-wallet-selector/near-wallet": "^7.0.0",
-    "@near-wallet-selector/nightly": "^7.0.0",
-    "@near-wallet-selector/nightly-connect": "^7.0.0",
-    "@near-wallet-selector/sender": "^7.0.0",
-    "@near-wallet-selector/wallet-connect": "^7.0.0"
+    "webpack": "^5.91.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,6 +42,17 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.4.3",
+    "url": "^0.11.3",
+    "vm-browserify": "^1.1.2"
   }
 }
